# bris-fiab

./: .gitignore  README.md  config.yaml  create_animation.sh  create_singlemap.py  download_orography.py  example-config.yaml  main.py  mkglobal_grid.py  mkgrid.py  pyproject.toml  update_checkpoint.py  update_metadata.py
bris-adapt/: README.md  pyproject.toml
bris-adapt/bris_adapt/checkpoint/: config.py  downscale.py  elevation.py  fiab.py  graph.py  interpolate.py  make_graph.py  metadata.py  update.py
bris-adapt/bris_adapt/move_checkpoint/: __init__.py  checkpoint.py  grid.py
bris-adapt/bris_adapt/orography/: api_key.py  area.py  download.py  merge.py  ot.py  tiles.py
bris-adapt/bris_adapt/process/: config.py  interpolate.py  ncutil.py
bris-adapt/bris_adapt/scripts/: __init__.py  run.py
bris-adapt/bris_adapt/scripts/checkpoint/: __init__.py  download_orography.py  list_dependencies.py  move_domain.py  move_grid.py
bris-adapt/bris_adapt/scripts/process/: __init__.py  config.py  create_image.py  interpolate.py  make_grid.py  mkglobal_grid.py
bris-adapt/scripts/checkpoint/: move_domain.py
bris-anemoi-plugins/: README.md  pyproject.toml
bris-anemoi-plugins/src/anemoi/plugins/bris/inference/apply_adiabatic_corrections/: __init__.py  adiabatic_correct.py  adiabatic_correct_test.py  apply_adiabatic_corrections.py  apply_adiabatic_corrections_test.py  test_data.grib
bris-anemoi-plugins/src/anemoi/plugins/bris/inference/apply_adiabatic_corrections/test_data/: 2.grib
bris-anemoi-plugins/src/anemoi/plugins/bris/inference/interpolate/: __init__.py  interpolate.py
bris-move-domain/: README.md  pyproject.toml
bris-move-domain/bris_move_domain/checkpoint/: downscale.py  metadata.py  update.py
bris-move-domain/etc/: mkgrid.json
bris-move-domain/scripts/: run.py
bris-move-domain/scripts/checkpoint/: download_orography.py  move_domain.py
bris_fiab/anemoi_plugins/inference/apply_adiabatic_corrections/: __init__.py  apply_adiabatic_corrections.py  apply_adiabatic_corrections_test.py
bris_fiab/anemoi_plugins/inference/apply_adiabatic_corrections/test_data/: 1.grib
bris_fiab/anemoi_plugins/inference/cached_mars/: __init__.py  cached_mars.py
bris_fiab/anemoi_plugins/inference/downscale/: __init__.py  downscale.py
bris_fiab/checkpoint/: config.py  elevation.py  fiab.py  graph.py  make_graph.py  metadata.py  update.py
bris_fiab/orography/: download.py
bris_fiab/scripts/: __init__.py  run.py
bris_fiab/scripts/checkpoint/: __init__.py  download_orography.py  move_domain.py  update_checkpoint.py  update_metadata.py
bris_fiab/scripts/process/: __init__.py  create_image.py  make_grid.py
etc/: checkpoint_metadata_part.yaml  mkgrid.json
