[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[tool.setuptools]
packages = ["bris_fiab"]

[project]
name = "bris-fiab"
version = "0.1.0"
description = "Running the bris model in Forecast-in-a-Box"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anemoi-datasets==0.5.26",
    "anemoi-graphs==0.6.2",
    "anemoi-inference==0.7.0",
    "anemoi-models==0.4.1",
    "anemoi-plugins-ecmwf-inference[regrid]>=0.1.2",
    "anemoi-transform==0.1.14",
    "anemoi-utils==0.4.29",
    "ecmwf-api-client==1.6.5",
    "mir-python==1.27.1.dev20250627",
    "multiolib==2.6.1.dev20250627",
    "rioxarray>=0.19.0",
]

[project.entry-points."anemoi.inference.inputs"]
cached_mars = "bris_fiab.anemoi_plugins.inference.cached_mars:CachedMarsInput"
downscaled_mars = "bris_fiab.anemoi_plugins.inference.downscale:DownscaledMarsInput"

[project.entry-points."anemoi.inference.pre_processors"]
downscale = "bris_fiab.anemoi_plugins.inference.downscale:DownscalePreProcessor"
