[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[tool.setuptools]
packages = [
    "bris_fiab", 
    "bris_fiab.anemoi_plugins.inference.downscale", 
    "bris_fiab.checkpoint",
    "bris_fiab.orography",
]

[project]
name = "bris-fiab"
version = "0.1.0"
description = "Running the bris model in Forecast-in-a-Box"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anemoi-datasets",
    "anemoi-graphs",
    "anemoi-inference",
    "anemoi-models==0.4.1",
    "anemoi-transform",
    "anemoi-utils",
    "ecmwf-api-client",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "rioxarray>=0.19.0",
    "scipy>=1.16.1",
    "trimesh>=4.7.3",
    "pyyaml>=6.0.1",
    "metpy>=1.7.1",
]

[project.entry-points."anemoi.inference.inputs"]
downscaled_mars = "bris_fiab.anemoi_plugins.inference.downscale:DownscaledMarsInput"

[project.entry-points."anemoi.inference.pre_processors"]
downscale = "bris_fiab.anemoi_plugins.inference.downscale:DownscalePreProcessor"
