[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[tool.setuptools]
packages = [
    "bris_adapt",
    "bris_adapt.checkpoint",
    "bris_adapt.orography",
]

[tool.uv.sources]
anemoi-datasets = { git = "https://github.com/metno/anemoi-datasets.git", rev = "feature/trimedge" }
anemoi-models = { git = "https://github.com/ecmwf/anemoi-core.git", subdirectory = "models", rev = "652507dca5f296ee3efa6e77b07725c21ba6137f" }

[project]
name = "bris-adapt"
version = "0.1.1"
description = "Use a Bris checkpoint to create a new checkpoint with a new graph for a specified domain."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "anemoi-datasets",
    "anemoi-graphs",
    "anemoi-inference==0.8.2",
    "anemoi-models",
    "metpy>=1.7.1",
    "anemoi-transform",
    "anemoi-utils[provenance]",
    "ecmwf-api-client",
    "pydantic>=2.11.7",
    "rioxarray>=0.19.0",
    "scipy>=1.16.1",
    "trimesh>=4.7.3",
    "pyyaml>=6.0.1",
    "metpy>=1.7.1",
    "twine>=6.2.0",
    "torch-geometric==2.6.1",
]

[project.scripts]
bris-adapt = "bris_adapt.scripts:cli"

[project.urls]
Homepage = "https://github.com/metno/bris-fiab"
Issues = "https://github.com/metno/bris-fiab/issues"
