[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[tool.setuptools]
packages = [
    "bris_move_domain", 
    "bris_move_domain.checkpoint",
    "bris_move_domain.orography",
    "scripts",
]

[project]
name = "bris-move-domain"
version = "0.1.1"
description = "Use a Bris checkpoint to create a new checkpoint with a new graph for a specified domain."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "anemoi-datasets",
    "anemoi-graphs",
    "anemoi-inference",
    "anemoi-models==0.9.5",
    "metpy>=1.7.1",
    "anemoi-transform",
    "anemoi-utils",
    "ecmwf-api-client",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "rioxarray>=0.19.0",
    "scipy>=1.16.1",
    "trimesh>=4.7.3",
    "pyyaml>=6.0.1",
    "metpy>=1.7.1",
    "twine>=6.2.0",
    "torch-geometric==2.4.0",
]

[project.scripts]
bris_move_domain = "scripts:cli"

[project.urls]
Homepage = "https://github.com/metno/bris-fiab"
Issues = "https://github.com/metno/bris-fiab/issues"
